# UGent_Algorithms-and-Data-structures

Airbnb/: README.md
Airbnb/include/: airbnb.h  bknoop.h  btree.h  schijf.h
Airbnb/src/: airbnb.cpp  main.cpp
Airbnb/test/: test.cpp
AutomatenUitRegexp/: README.md
AutomatenUitRegexp/include/: automaten.h  regexp.h
AutomatenUitRegexp/src/: automaten.cpp  regexp.cpp  regexp_voorbeeld.cpp
AutomatenUitRegexp/test/: test.cpp
Backtracking/src/: Sudoku.h  main.cpp
Bellman Ford & Top down insertion in Red Black Tree/: CMakeLists.txt  README.md  timestamp.txt
Bellman Ford & Top down insertion in Red Black Tree/include/: bellmanford.h  graaf.h  rzwboom.h
Bellman Ford & Top down insertion in Red Black Tree/src/: bellmanford.cpp  vraag1.cpp  vraag2.cpp
BoyerMoore/: CMakeLists.txt  README.md
BoyerMoore/include/: boyermoore.h
BoyerMoore/src/: bm_horspool.cpp  bm_sunday.cpp  bm_verkeerdekarakter.cpp  main.cpp
BoyerMoore/test/: CMakeLists.txt  benchmark.cpp  test.cpp
DEFLATE/: CMakeLists.txt
DEFLATE/include/: suffix_array.h
DEFLATE/src/: main.cpp  suffix_array.cpp
DEFLATE/test/: test.cpp
DeBruijnreeks/: CMakeLists.txt
DeBruijnreeks/include/: graaf.hpp
DeBruijnreeks/src/: debruijnreeks.cpp  euler.cpp
DeBruijnreeks/test/: CMakeLists.txt  test.cpp
Decision Tree (ID3)/src/: ID3.h  binarytree.h  main.cpp
Harde schijf/: CMakeLists.txt  README.md  timestamp.txt
Harde schijf/include/: exthash.h  pagina.h  schijf.h  utils.h
Harde schijf/src/: exthash.cpp  main.cpp
Hash functions/src/: hashfunctions.h  main.cpp
Huffman encoding & Rabin Karp/: README.md  timestamp.txt
Huffman encoding & Rabin Karp/src/: huffman.cpp  vraag2.cpp
IslandOfSodor/: CMakeLists.txt  bipartitegraaf_SMALL
Kettingwoorden/: .gitignore
Linked List/: lijst.h  lijsttest.cpp
Pakjesbezorger/: README.md
Quicksort/: Deksel.cpp  Deksel.h  Matcher.cpp  Matcher.h  Pot.cpp  Pot.h  Voorwerp.cpp  Voorwerp.hpp  test.cpp
hardnekkigeProblemen/: CMakeLists.txt  README.md
(+35 files in other folders)
